--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ header .text-content .job{
   border: none;
   border-radius: 6px;
   font-size: 30px;
-  color: rgb(54, 45, 45);
+  color: rgb(42, 35, 35);
   padding: 8px 16px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -170,7 +170,7 @@ nav {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  background-color: antiquewhite;
+  background-color: rgb(244, 241, 241);
   padding: 20px;
 }
 
@@ -230,11 +230,11 @@ nav {
   padding: 2px 16px;
 }
 
-/* Style inputs with type="text", select elements and textareas */
+/* Style inputs with type="text", select elements and textareas contact page*/
 input[type=text], select, textarea {
   width: 100%; /* Full width */
   padding: 12px; /* Some padding */ 
-  border: 1px solid #ccc; /* Gray border */
+  border: 1px solid rgb(239, 234, 234); /* Gray border */
   border-radius: 4px; /* Rounded borders */
   box-sizing: border-box; /* Make sure that padding and width stays in place */
   margin-top: 6px; /* Add a top margin */
@@ -245,7 +245,7 @@ input[type=text], select, textarea {
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
   background-color: #04AA6D;
-  color: white;
+  color: rgb(247, 244, 244);
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -260,7 +260,7 @@ input[type=submit]:hover {
 /* Add a background color and some padding around the form */
 .container-c {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #e4dede;
   padding: 20px;
 }
 
@@ -279,7 +279,7 @@ img {
 a {
   text-decoration: none;
   outline: none;
-  color: #444; }
+  color: rgb(249, 246, 246); }
 
 a:hover {
   color: #444; }
@@ -308,7 +308,7 @@ html, body {
   height: 100%; }
 
 ::placeholder {
-  color: #747f8a !important;
+  color: #414d56 !important;
   font-size: 13px;
   opacity: .5 !important; }
 
@@ -323,14 +323,14 @@ h1, h2, h3, h4, h5, h6 {
   
 strong {
   font-family: "Open Sans", sans-serif;}
-
+/*page backgroung colour*/
 body {
   background-color: #f1f0e9f1 !important;
   font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  color: #070606;
+  color: #060303;
   overflow-x: hidden; }
 
 .session-title {
